# signalhireagent

./: .env.example  .gitignore  AGENTS.md  AI_DESKTOP_AUTOMATION_PLATFORM_PLAN.md  CLAUDE.md  CLEANUP_PLAN.md  ENHANCEMENTS.md  ENVIRONMENT_SETUP.md  GEMINI.md  MANIFEST.in  MULTI_AGENT_INTEGRATION_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOYMENT_GUIDE.md  README.dev.md  README.md  SCALE_TRACKING_STRATEGY.md  TESTING_AND_RELEASE.md  VERSION  callback-cloud-init.yaml  check_existing_contacts.py  cleanup_duplicates.py  cleanup_root_directory.py  docker-compose.yml  find_duplicates.py  package-lock.json  package.json  prospects_need_reveal.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_complete_automation.py  setup.sh  sha  signalhire-agent  test-sync-demo.md  test-workflow.md  test.txt  test_airtable_mcp.py  test_api_connection.py  (+10 more)
.archive/: README.md  automated_signalhire_airtable.py  credit_usage_plan.py  extract_revealed_heavy_equipment.py  signalhire_airtable_integration.py  signalhire_to_airtable.py
.archive/browser-automation/: README.md  stagehand_bridge.js  stagehand_wrapper.py
.archive/cleanup/: add_profiles_to_airtable.py  fix_airtable_records.py  reveal_contacts.py  run.py  simple_callback_server.py  test_airtable_access.py  test_airtable_fetch.py  test_callback_fix.py
.archive/coordination-experiment/: README.md  agent-coordinator.py  coordinate-agents.sh  debug-coordinator.py
.archive/heavy-automation/: complete_airtable_automation.py
.archive/legacy_tests/: botasaurus_test.py  cleanup_sessions.py  cloudflare_bypass_suite.py  debug_login.py  session_manager.py  smart_test.py  test_browserbase.py  test_complete_workflow.py  test_detailed_login.py  test_improved_automation.py  test_local_automation.py  test_quick.py  test_signalhire_search.py  test_smart_signalhire.py  test_stagehand.py  undetected_chrome_test.py
.archive/venv-old/: pyvenv.cfg
.automation/: README.md  config.yml
.claude/: settings.json.backup
.claude/agents/: backend-tester.md  code-refactorer.md  frontend-playwright-tester.md  integration-architect.md  pr-feedback-router.md  pr-reviewer.md  production-specialist.md  security-auth-compliance.md  system-architect.md  test-generator.md
.claude/commands/: add-mcp.md  ai-review.md  ai-spec-enhance.md  create-issue.md  deploy.md  discussions.md  example-perfect-pattern.md  implement.md  import-tasks.md  plan-generate.md  plan.md  prod-ready.md  project-setup.md  tasks.md  test-generate.md  test-prod.md  test.md  update-agent-context.md  update-memory.md  work.md
.claude/hooks/: README.md  TodoWrite-post.sh  doc-updater.sh  load-context.sh  production_context_injector.py  register-session.sh  save-work-state.sh  verify-sync-before-claude.sh  work-checkpoint.sh
.claude/scripts/: deploy-agent-swarm.sh  mock_detector.py  swarm
.codex/: codex.toml
.github/: copilot-instructions.md  environments.json  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hotfix.yml  task.yml
.github/workflows/: agent-pr-review.yml  agent_ci.yml  auto-release.yml  auto-update-projects.yml  ci.yml  claude-feedback-router.yml  claude-review-automation.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  release.yml  test-environments.yml  version-management.yml  worktree-tests.yml
.multiagent/: .gitmessage  README.md
.multiagent/config/: project-sync-config.template.json
.multiagent/core/: __init__.py  backup_settings.py  build_hook.py  constitution-multi-agent-addon.md  deployed-projects-registry.json  enhance_deploy.py  reset_settings.py  setup_new_project.py  sync_agent_mcp.py  sync_mcp.py  sync_project.py  sync_settings.py  template_updater.py  update_from_template.py  webhook_notifier.py  wsl-setup.template.sh
.multiagent/docs/: README.md  SOLO_FOUNDER_GUIDE.md  VERSIONING.md
.multiagent/prompts/: README.md  claude-startup.txt  codex-startup.txt  copilot-startup.txt  gemini-startup.txt  qwen-startup.txt
.multiagent/scripts/: core-setup.sh  pr-review-automation.sh  release.sh  setup-claude-workflows.sh  sync-version.sh  update-all-including-components.sh  update-all-projects.sh
archive/: add_sample_contact_to_airtable.py  claude_automated_integration.py  process_contacts_to_airtable.py  process_revealed_contacts_to_airtable.py  push_to_airtable.py
automation-template-package/: .gitignore-additions  AGENT_COMMIT_GUIDELINES.md  BALANCED_QUALITY_APPROACH.md  INTEGRATION_GUIDE.md  README.md
backend-tests/: conftest.py
data/: README.md
deploy/: README.md  deploy
devops/: README.md  TEMPLATE_STRUCTURE.md
docs/: DEPLOYMENT.md  README.md  TESTING_AND_RELEASE.md  cli-commands.md  github-copilot-cli-guide.md
frontend-testing-suite-template/: README.md  playwright.config.ts  setup-testing.sh
frontend-tests-template/: README.md  package.json
infra/: digitalocean-app-spec.yaml  droplet-cloud-init.yaml
memory/: constitution.md
ops/: README.md  config.yml  ops
samples/: heavy_duty_mechanic_sample.json  heavy_equipment_technician_sample.json
scripts/: README.md  add-automation-to-project.sh  agent-coordinator.py  auto-sync-to-test.sh  build-production.sh  build.sh  clean_workflow.sh  create-release.sh  daily_job.sh  deploy-to-production.sh  deploy.sh  extract_candidates_to_csv.py  git-commit-helper.sh  intelligent-auto-deploy.sh  ops  run_signalhire_job.py  serve_callback.py  setup-cd  setup-production-workspace.sh  signalhire_automation.js  test.sh  validate_docs.py
searches/: heavy_equipment_mechanics_canada_all.json
templates/: plan-template.md  tasks-template.md
testing-suite-template/: package.json  playwright.config.ts
tests/: README.md  conftest.py
tools/: README.md
utils/: check_airtable_status.py
(+366 files in other folders)
